[package]
name = "dnsping"
version = "0.1.1"
authors = ["Xie Zhihao <xzh1206@gmail.com>"]
edition = "2018"
description = "Ping a server with DNS."
documentation = "https://docs.rs/dnsping"
readme = "README.md"
repository = "https://github.com/zhxie/dnsping"
license = "MIT"
keywords = ["dns", "ping"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
ctrlc = "3.1.4"
dns-lookup = "1.0.3"
dns-parser = "0.8.0"
socks = "0.3.2"
structopt = "0.3.15"
